cicd/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: demo-app 
  name: demo-app
spec:
  ports:
  - name: 80-tcp
    port: 80
    protocol: TCP
    targetPort: 3000
  selector:
    app: demo-app
  sessionAffinity: None
  type: ClusterIP
