cicd/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    app: demo-app
  name: demo-app
spec:
  port:
    targetPort: 80-tcp
  to:
    kind: Service
    name: demo-app
    weight: 100
